--- a/chattigo_charla.ipynb
+++ b/chattigo_charla.ipynb
@@ -5,7 +5,21 @@
    "metadata": {},
    "source": [
     "# Python para Ciencias de Datos : Introducción a Numpy y Pandas\n",
-    "![](./imagenes/chattigo.png)\n"
+    "![](./imagenes/chattigo.png)\n",
+    "\n",
+    "[Este Jupyter puedes descargarlo aqui][1]\n",
+    "\n",
+    "## Documentación\n",
+    "\n",
+    "[Python for Data Analysis][3]\n",
+    "\n",
+    "[Documentacion de Pandas en Pydata][2] \n",
+    "\n",
+    "[Documentación de Numpy][4]\n",
+    "\n",
+    "[1]: https://github.com/Bt2y/Python-in-Data-Science-Introduction-to-Numpy-and-Pandas\n",
+    "[2]: https://pandas.pydata.org/docs/\n",
+    "[3]: https://bedford-computing.co.uk/learning/wp-content/uploads/2015/10/Python-for-Data-Analysis.pdf"
    ]
   },
   {
@@ -97,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "504 µs ± 7.43 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "474 µs ± 11.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -114,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "391 µs ± 835 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "391 µs ± 1.36 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -131,13 +145,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "764 ms ± 1.84 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "772 ms ± 6.81 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<TimeitResult : 764 ms ± 1.84 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)>"
+       "<TimeitResult : 772 ms ± 6.81 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)>"
       ]
      },
      "execution_count": 4,
@@ -161,13 +175,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.7 ms ± 159 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "53.8 ms ± 3.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<TimeitResult : 50.7 ms ± 159 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)>"
+       "<TimeitResult : 53.8 ms ± 3.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)>"
       ]
      },
      "execution_count": 5,
@@ -190,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "15.085861718955655"
+       "14.782397384077353"
       ]
      },
      "execution_count": 6,
@@ -2158,14 +2172,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>San Carlos</td>\n",
+       "      <td>Woodside</td>\n",
        "      <td>City</td>\n",
        "      <td>01/01/2014 12:00:00 AM</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>(37.678889, -122.455556)</td>\n",
+       "      <td>(37.482778, -122.236111)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -2260,18 +2274,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         geography geography_type                    year  \\\n",
-       "count           32             32                      32   \n",
-       "unique          32              3                       1   \n",
-       "top     San Carlos           City  01/01/2014 12:00:00 AM   \n",
-       "freq             1             15                      32   \n",
-       "mean           NaN            NaN                     NaN   \n",
-       "std            NaN            NaN                     NaN   \n",
-       "min            NaN            NaN                     NaN   \n",
-       "25%            NaN            NaN                     NaN   \n",
-       "50%            NaN            NaN                     NaN   \n",
-       "75%            NaN            NaN                     NaN   \n",
-       "max            NaN            NaN                     NaN   \n",
+       "       geography geography_type                    year  \\\n",
+       "count         32             32                      32   \n",
+       "unique        32              3                       1   \n",
+       "top     Woodside           City  01/01/2014 12:00:00 AM   \n",
+       "freq           1             15                      32   \n",
+       "mean         NaN            NaN                     NaN   \n",
+       "std          NaN            NaN                     NaN   \n",
+       "min          NaN            NaN                     NaN   \n",
+       "25%          NaN            NaN                     NaN   \n",
+       "50%          NaN            NaN                     NaN   \n",
+       "75%          NaN            NaN                     NaN   \n",
+       "max          NaN            NaN                     NaN   \n",
        "\n",
        "        less_than_high_school_graduate  high_school_graduate  \\\n",
        "count                         32.00000             32.000000   \n",
@@ -2302,7 +2316,7 @@
        "                      location_1  \n",
        "count                         32  \n",
        "unique                        32  \n",
-       "top     (37.678889, -122.455556)  \n",
+       "top     (37.482778, -122.236111)  \n",
        "freq                           1  \n",
        "mean                         NaN  \n",
        "std                          NaN  \n",
@@ -3700,7 +3714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -3766,7 +3780,7 @@
        "3      Sue           HR   90000"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3784,7 +3798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -3903,7 +3917,7 @@
        "Sue            2014"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3916,7 +3930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -4096,7 +4110,7 @@
        "Sue                HR       2014"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4108,7 +4122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -4288,7 +4302,7 @@
        "Sue                HR       2014"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4307,7 +4321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -4486,7 +4500,7 @@
        "3           HR   Sue   90000"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4511,7 +4525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -4651,7 +4665,7 @@
        "0  Mary  bread  wine"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4668,7 +4682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -4713,7 +4727,7 @@
        "0  Mary  bread  wine"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4724,7 +4738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -4885,7 +4899,7 @@
        "3  Joseph    NaN  beer"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4896,7 +4910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -5050,7 +5064,7 @@
        "2   Mary  bread  wine"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5082,7 +5096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5091,7 +5105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5116,7 +5130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -5140,16 +5154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe56b293dd8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8da7b3fbe0>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5173,7 +5187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -5201,7 +5215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -5226,7 +5240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
